GUACAMOLE-497: Remove usage of now-deprecated container class constructors.